[gd_scene load_steps=10 format=2]

[ext_resource path="res://Images/bg.png" type="Texture" id=1]
[ext_resource path="res://GameTest.gd" type="Script" id=2]
[ext_resource path="res://Images/cookiePressed.png" type="Texture" id=3]
[ext_resource path="res://Images/cookie.png" type="Texture" id=4]
[ext_resource path="res://Images/topBar.png" type="Texture" id=5]
[ext_resource path="res://coolvetica rg.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Fonts/coolvetica rg.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 47
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 23
outline_size = 2
outline_color = Color( 0.996078, 0.0156863, 0.0156863, 1 )
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="UI" type="CanvasLayer" parent="."]
layer = -5

[node name="Background" type="Sprite" parent="UI"]
position = Vector2( 512.503, 298.8 )
scale = Vector2( 2.13649, 0.748849 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="UI"]
position = Vector2( 491.811, 56.2111 )
texture = ExtResource( 5 )

[node name="LabelCookies" type="Label" parent="UI"]
margin_left = 292.221
margin_top = 8.79607
margin_right = 703.667
margin_bottom = 65.7961
custom_fonts/font = SubResource( 1 )
text = "(Cookies)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabalCookiesPerSecond" type="Label" parent="UI"]
margin_left = 282.788
margin_top = 66.7893
margin_right = 694.234
margin_bottom = 80.7893
custom_fonts/font = SubResource( 2 )
text = "Cookies /S"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 340.507
margin_top = 211.927
margin_right = 640.507
margin_bottom = 511.927
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
